--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build_cv:
     - latexmk -pdflatex=lualatex -pdf CV.tex
   artifacts:
     paths:
-      - HosseinBeheshti_CV.pdf
+      - CV.pdf
     expire_in: 4 week
 
 build_coverletter:
